# dd-trace-php

./: .clang-format  .clang-format-ignore  .clang-tidy  .codecov.yml  .dockerignore  .editorconfig  .env  .env.circleci  .gdb_history  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .mcp.json  .phpcs.xml  AGENTS.md  BENCHMARKING.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  CONVENTIONS.md  Cargo.toml  DDMakefile  Dockerfile  FFE_FLUSH_PLAN.md  LIBDATADOG.md  LICENSE-3rdparty.csv  LICENSE.BSD3  Makefile  NOTICE  README.md  RELEASING.md  SECURITY.md  UPGRADE-0.10.md  UPGRADE-0.9.md  UPGRADE-1.0.md  VERSION  aggregated_tested_versions.json  (+56 more)
appsec/: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  LICENSE-3rdparty.csv  README.md  hunter-cache.id.in  recommended.json  run-tests-internal.php  suppressions.txt  valgrind.supp
appsec/cmake/: Toolchain.aarch64.cmake  Toolchain.x86_64.cmake  boost.cmake  check_headers.rb  clang-format.cmake  clang-tidy.cmake  components_rs.cmake  cond_flag.cmake  coverage.cmake  ddtrace.cmake  ext_asan.cmake  extension.cmake  helper.cmake  helper_rust.cmake  libxml2.cmake  patchelf.cmake  pcre2.cmake  run-tests-wrapper.sh  run_tests.cmake  strip_libc.sh  update_helper_rust_stamp.cmake  update_rust_stamp.cmake
appsec/helper-rust/: CLAUDE.md  Cargo.toml  Makefile  build.rs  clippy.toml  coverage_init.c  glibc_compat.c  outline_atomics.c  test_sidecar_lib.c
components/: CMakeLists.txt  README.md  atomic_win32_polyfill.h  pthread_polyfill.h
components-rs/: Cargo.toml  agent_info.rs  build.rs  bytes.rs  common.h  crashtracker.h  data-pipeline.h  datadog.h  ddtrace.h  ffe.rs  lib.rs  library-config.h  live-debugger.h  log.rs  otel-thread-ctx.h  profiling.h  remote_config.rs  sidecar-appsec.h  sidecar.h  sidecar.rs  ssi_entry.c  stats.rs  telemetry.h  telemetry.rs  trace_exporter.h  trace_filter.rs
components-rs/php_sidecar_mockgen/: Cargo.toml
components-rs/sidecar-bin/: Cargo.toml  build.rs
components/arena/: CMakeLists.txt  arena.c  arena.h
components/channel/: CMakeLists.txt  channel.c  channel.h
components/container_id/: CMakeLists.txt  container_id.c  container_id.h
components/context-discovery/: context_discovery.c  context_discovery.h
components/log/: CMakeLists.txt  log.c  log.h
components/queue/: CMakeLists.txt  queue.c  queue.h
components/rust/: Cargo.toml  build.rs  common.h  ddtrace.h  lib.rs  mock_php.c  mock_php_8.c  shm_vm_interrupt.rs  some_name_ffi.h  telemetry.h  telemetry.rs
components/sanitize/: a.out  sanitize.c
components/sapi/: CMakeLists.txt  sapi.c  sapi.h
components/stack-sample/: CMakeLists.txt  stack-sample.c  stack-sample.h
components/string_view/: CMakeLists.txt  string_view.c  string_view.h
components/telemetry/: telemetry.c  telemetry.h
components/time/: CMakeLists.txt  time.c  time.h
components/uuid/: CMakeLists.txt  uuid.c  uuid.h
ext/DDProf/: CMakeLists.txt
ext/DatadogArena/: CMakeLists.txt  arena.c
ext/DatadogMemHash/: CMakeLists.txt  README.md  memhash.cc
profiling/: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE-3rdparty.csv  Makefile.frag  NOTICE  README.md  alternatives.md  build-linux-lto.sh  build.rs  cargo-lto.sh  config.m4  datadog-profiling-install.sh  datadog-profiling.c  datadog-profiling.h  datadog-profiling.m4  datadog-profiling.sym  php_datadog-profiling.h
profiling-store/: Cargo.toml
profiling-store/src/: lib.rs
profiling/.cargo/: config  config.toml
profiling/benches/: concatenation.rs  exceptions.json  exceptions.php  heap_live_tracking.rs  memory.json  stack_walking.rs  timeline.php
profiling/components/: CMakeLists.txt
profiling/src/: allocation.rs  allocations.rs  bindings.rs  bitset.rs  capi.rs  clocks.rs  config.rs  dogstatsd.rs  elfutils.c  exception.rs  inlinevec.rs  interning.rs  interrupter.rs  io.rs  lib.rs  logging.rs  module_globals.rs  pcntl.rs  php_ffi.c  php_ffi.h  profile_builder.rs  profiling.rs  profiling.stub.php  pthread.rs  sapi.rs  shm_cache.rs  stack_walking.rs  string_set.rs  string_table.rs  thin_str.rs  thread_queue.rs  thread_utils.rs  timeline.rs  uploading.rs  vec_ext.rs  wall_time.rs  wall_time_tests.rs  well_known.rs  zend_string.rs
profiling/stack-collector/: CMakeLists.txt  stack-collector.c  stack-collector.h
profiling/tests/: INVESTIGATE-opcache-do_icall.md  README.md  php-language-xfail-8.0.list  php-language-xfail-pre84.list  php-language-xfail-zts.list  php-language-xfail.list
profiling_shm/: Cargo.toml
profiling_shm/audit/: Cargo.toml  check_no_panic.sh
profiling_shm/src/: atomic.rs  function_interner.rs  hash.rs  lib.rs  loom_tests.rs  shm.rs  spinlock.rs  string_interner.rs
sidecar/: Cargo.toml
sidecar/src/: lib.rs
tea/: CMakeLists.txt  config.m4
tea/benchmarks/: CMakeLists.txt  README.md  benchmark.cc  memory_manager.h
tea/cmake/: TeaConfig.cmake.in
tea/include/: common.h  error.h  exceptions.h  extension.h  frame.h  sapi.h
tea/private/: error.h  extension.h  frame.h  ini.h  io.h
tea/src/: error.c  exceptions.c  extension.c  frame.c  ini.c  io.c  sapi.c
tea/tests/: CMakeLists.txt  error.cc  extension.cc  ini.cc  io.cc  sapi.cc  testing.cc
test/: CMakeLists.txt  arena.cc  cantor.cc  memhash.cc  pprof.cc  string_table.cc
thin-str/: Cargo.toml
thin-str/src/: lib.rs  thin_str.rs  thin_string.rs
zai_sapi/: CMakeLists.txt  zai_sapi_extension.h  zai_sapi_functions.c  zai_sapi_ini.c  zai_sapi_io.h  zai_sapi_test.hpp
zai_sapi/cmake/: ZaiSapiConfig.cmake.in
zai_sapi/php5/: zai_sapi.c
zai_sapi/php7/: zai_sapi.c
zai_sapi/php8/: zai_sapi.c
zai_sapi/testing/: catch2.hpp
zai_sapi/tests/: CMakeLists.txt  zai_sapi.cc  zai_sapi_functions.cc  zai_sapi_ini.cc  zai_sapi_io.cc  zai_sapi_testing.cc
zend_abstract_interface/: CMakeLists.txt  catch2_main.cc  components_rs.cmake  tsrmls_cache.h  zai_compat.h
zend_abstract_interface/call/: CMakeLists.txt  call.c  call.h
zend_abstract_interface/config/: CMakeLists.txt  config.c  config.h  config_decode.c  config_decode.h  config_ini.c  config_ini.h  config_runtime.c  (+2 more)
(+7617 files in other folders)
