[workspace]
members = ["components-rs", "components-rs/php_sidecar_mockgen", "profiling"]
resolver = "2"

[workspace.package]
rust-version = "1.84.1"
edition = "2021"
# Version must match libdatadog submodule version so that `version.workspace = true` crates
# resolve to a version compatible with their dependents' requirements.
version = "28.0.3"
license = "Apache-2.0"

[profile.dev]
debug = 2 # full debug info

[profile.release]
codegen-units = 1
debug = "line-tables-only"
incremental = false
lto = "fat"

[profile.tracer-release]
debug = 1 # line tables only
lto = true
codegen-units = 1
panic = "abort"
inherits = "release"

[profile.profiler-release]
panic = "abort"
inherits = "release"

# These are to satistfy the build with libdatadog as a path dependency inside
# components-rs. There may be a better way to fix this, but I'm alreday two
# tasks removed from what I'm trying to do, so pushing forward.
[workspace.dependencies]
hyper = { version = "1.6", features = [
  "http1",
  "client",
], default-features = false }
hyper-util = { version = "0.1.10", features = [
  "http1",
  "client",
  "client-legacy",
] }

