[package]
name = "ddtrace-php"
version = "0.0.1" # version number doesn't matter thanks to us statically linking
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]
path = "lib.rs"

[dependencies]
ddcommon = { path = "../libdatadog/ddcommon" }
ddcommon-ffi = { path = "../libdatadog/ddcommon-ffi" }
ddtelemetry = { path = "../libdatadog/ddtelemetry" }
ddtelemetry-ffi = { path = "../libdatadog/ddtelemetry-ffi" }
datadog-sidecar = { path = "../libdatadog/sidecar" }
datadog-sidecar-ffi = { path = "../libdatadog/sidecar-ffi" }
spawn_worker = { path = "../libdatadog/spawn_worker" }
anyhow = { version = "1.0" }
bitflags = "2.3.3"
const-str = "0.5.6"
json = "0.12.4"
lazy_static = "1.4"
log = "0.4.20"
env_logger = "0.10.1"
uuid = { version = "1.0", features = ["v4"] }
paste = "1"
tempfile = {version = "3.3"}
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-core = "0.1.32"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "std",
    "fmt",
    "env-filter",
] }

[build-dependencies]
cbindgen = "0.24"
cc_utils = { path = "../libdatadog/tools/cc_utils" }
sidecar_mockgen = { path = "../libdatadog/tools/sidecar_mockgen" }
