[package]
name = "ddtrace-php"
version = "0.0.1" # version number doesn't matter thanks to us statically linking
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]
path = "lib.rs"

[dependencies]
ddcommon = { path = "../libdatadog/ddcommon" }
ddcommon-ffi = { path = "../libdatadog/ddcommon-ffi", default-features = false }
ddtelemetry = { path = "../libdatadog/ddtelemetry" }
ddtelemetry-ffi = { path = "../libdatadog/ddtelemetry-ffi", default-features = false }
datadog-sidecar = { path = "../libdatadog/sidecar" }
datadog-sidecar-ffi = { path = "../libdatadog/sidecar-ffi" }
datadog-profiling-ffi = { path = "../libdatadog/profiling-ffi" }
spawn_worker = { path = "../libdatadog/spawn_worker" }
anyhow = { version = "1.0" }
const-str = "0.5.6"
serde = "1.0.196"
simd-json = "0.13.8"
serde_with = "3.6.0"
lazy_static = "1.4"
log = "0.4.20"
env_logger = "0.10.1"
uuid = { version = "1.0", features = ["v4"] }
paste = "1"
tempfile = {version = "3.3"}
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-core = "0.1.32"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "std",
    "fmt",
    "env-filter",
] }

[build-dependencies]
cbindgen = "0.26"
