# Unless explicitly stated otherwise all files in this repository are licensed under the Apache License Version 2.0.
# This product includes software developed at Datadog (https://www.datadoghq.com/). Copyright 2021-Present Datadog, Inc.

[package]
name = "datadog-profiling-store"
version = "2.0.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
ahash = "0.8.3"
anyhow = "1.0.68"
bumpalo = { version = "3.12.0", features = ["collections"] }
crossbeam-channel = "0.5.6"
derivative = "2.2.0"
prost = "0.11.6"
self_cell = "0.10.2"
