[package]
name = "datadog-php-profiling"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.78"

[lib]
crate-type = ["cdylib"]
bench = false # disables cargo build in libtest bench

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Avoid ahash 0.8.7 we run into https://github.com/tkaitchuck/aHash/issues/195.
ahash = { version = "0.8.11" }
anyhow = { version = "1.0" }
cfg-if = { version = "1.0" }
cpu-time = { version = "1.0" }
chrono = { version = "0.4" }
crossbeam-channel = { version = "0.5", default-features = false, features = ["std"] }
datadog-alloc = { git = "https://github.com/DataDog/libdatadog", tag = "v15.1.0" }
datadog-profiling = { git = "https://github.com/DataDog/libdatadog", tag = "v15.1.0" }
ddcommon = { git = "https://github.com/DataDog/libdatadog", tag = "v15.1.0" }
datadog-library-config-ffi = { git = "https://github.com/DataDog/libdatadog", tag = "v16.0.3" } # Must be kept in sync with other extensions using the zend_abstract_interface/config library
env_logger = { version = "0.11", default-features = false }
indexmap = { version = "2.2" }
lazy_static = { version = "1.4" }
libc = "0.2"
# TRACE set to max to support runtime configuration.
log = { version = "0.4", features = ["max_level_trace", "release_max_level_trace"]}
once_cell = { version = "1.12" }
serde_json = {version = "1.0"}
rand = { version = "0.8.5" }
rand_distr = { version = "0.4.3" }
rustc-hash = "1.1.0"
thiserror = "2"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
criterion = { version = "0.5.1" }
datadog-php-profiling = { path = ".", features = ["test"] }

[target.'cfg(target_arch = "x86_64")'.dev-dependencies]
criterion-perf-events = "0.4.0"
perfcnt = "0.8.0"

[[bench]]
name = "stack_walking"
harness = false

[features]
default = ["allocation_profiling", "timeline", "exception_profiling", "io_profiling"]
allocation_profiling = []
timeline = []
exception_profiling = []
stack_walking_tests = []
test = []
io_profiling = []

# only for testing:
trigger_time_sample = []

[build-dependencies]
bindgen = { version = "0.69.4" }
cc = { version = "1.0" }

# profiling release options in root Cargo.toml