[package]
name = "datadog-php-profiling"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.84.1"

[profile.release]
panic = "abort"

[lib]
crate-type = ["cdylib"]
bench = false # disables cargo build in libtest bench

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Avoid ahash 0.8.7 we run into https://github.com/tkaitchuck/aHash/issues/195.
ahash = { version = "0.8.11" }
anyhow = { version = "1.0" }
cfg-if = { version = "1.0" }
cpu-time = { version = "1.0" }
chrono = { version = "0.4" }
crossbeam-channel = { version = "0.5", default-features = false, features = ["std"] }
http = { version = "1.4" }
libdd-alloc = {  git = "https://github.com/DataDog/libdatadog", tag = "v27.0.0" }
libdd-profiling = {  git = "https://github.com/DataDog/libdatadog", tag = "v27.0.0" }
libdd-common = {  git = "https://github.com/DataDog/libdatadog", tag = "v27.0.0" }
libdd-library-config-ffi = { path = "../libdatadog/libdd-library-config-ffi" }
env_logger = { version = "0.11", default-features = false }
lazy_static = { version = "1.4" }
libc = "0.2"
# TRACE set to max to support runtime configuration.
log = { version = "0.4", features = ["max_level_trace", "release_max_level_trace"]}
serde_json = {version = "1.0"}
rand = { version = "0.8.5" }
rand_distr = { version = "0.4.3" }
rustc-hash = "1.1.0"
thiserror = "2"
tracing = { version = "0.1", optional = true }
uuid = { version = "1.0", features = ["v4"] }

[dependencies.tracing-subscriber]
version = "0.3"
optional = true
default-features = false
# Build without tracing-log to avoid hijacking existing log events, for now.
features = ["env-filter", "fmt", "smallvec", "std"]

[dev-dependencies]
allocator-api2 = { version = "0.2", default-features = false, features = ["alloc"] }
criterion = { version = "0.5.1" }
datadog-php-profiling = { path = ".", features = ["test"] }

[target.'cfg(target_arch = "x86_64")'.dev-dependencies]
criterion-perf-events = "0.4.0"
perfcnt = "0.8.0"

[[bench]]
name = "stack_walking"
harness = false

[features]
default = ["io_profiling"]
debug_stats = []
io_profiling = []
stack_walking_tests = []
test = []

# Not for prod:
tracing = ["dep:tracing"]
tracing-subscriber = ["tracing", "dep:tracing-subscriber"]
trigger_time_sample = []

[build-dependencies]
bindgen = { version = "0.69.4" }
cc = { version = "1.0" }

# profiling release options in root Cargo.toml

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(stack_walking_tests)'] }
